# brachiograph_ws

./: .gitignore  README.md
docker/: 01-build-image.sh  02-run-container.sh  03-connect-to-container.sh  04-stop-container.sh  05-get-container-ip.sh  07-inspect-healthcheck.sh  Dockerfile  build-and-run.sh  docker-compose.yml  start.sh
src/brachiograph_description/: CMakeLists.txt  package.xml
src/brachiograph_description/config/: controller.yaml
src/brachiograph_description/launch/: controller.launch  controller.launch.py  display.launch  gazebo.launch  urdf.rviz
src/brachiograph_description/meshes/: arm_inner.stl  arm_outer.stl  base_link.stl  lifter.stl
src/brachiograph_description/urdf/: brachiograph.gazebo  brachiograph.trans  brachiograph.xacro  materials.xacro
src/brachiograph_simulation/: CMakeLists.txt  package.xml
src/brachiograph_simulation/launch/: simulation.launch  simulation.launch.py
src/brachiograph_simulation/src/: joint_controller.cpp  joint_controller_fifo.cpp
src/sim_test/: Makefile  joint_client.cpp  joint_position_receiver.cpp  joint_position_sender.cpp  joint_server.cpp
