<?xml version="1.0"?>
<package format="3">
  <name>brachiograph_description</name>
  <version>0.0.0</version>
  <description>The brachiograph_description package</description>

  <maintainer email="hybrayhem@todo.todo">hybrayhem</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>

  <export>
  </export>
</package>