<?xml version="1.0"?>
<package format="2">
    <name>brachiograph_simulation</name>
    <version>0.0.0</version>
    <description>The brachiograph_simulation package</description>

    <maintainer email="hybrayhem@todo.todo">hybrayhem</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

    <export>
    </export>
</package>