<?xml version="1.0"?>
<package format="3">
    <name>brachiograph_simulation</name>
    <version>0.0.0</version>
    <description>The brachiograph_simulation package</description>

    <maintainer email="hybrayhem@todo.todo">hybrayhem</maintainer>

    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

    <export>
    </export>
</package>